# FontPenalty

./: CMakeLists.txt  CharSetFromLangID.cpp  FontPenalty.cpp  GetFontPenalty.cpp  ItalicFromStyle.cpp
